JumpScript/tests/baselines/reference/unusedPrivateVariableInClass1.errors.txt
tests/cases/compiler/unusedPrivateVariableInClass1.jump(2,13): error TS6133: 'x' is declared but its value is never read.


==== tests/cases/compiler/unusedPrivateVariableInClass1.jump (1 errors) ====
    class greeter {
        private x: string;
                ~
!!! error TS6133: 'x' is declared but its value is never read.
    }